--- a/css/main.css
+++ b/css/main.css
@@ -224,7 +224,6 @@ html {
 }
 
 body {
-    background-color: #ffffff;
     color: #000000;
 }
 
@@ -2067,7 +2066,7 @@ textarea {
     border-radius: 4px;
     border: none;
     border: solid 1px;
-    color: inherit;
+    color: rgb(107, 107, 107);
     display: block;
     outline: 0;
     padding: 0 0.825rem;
