Corregido fallo borrar

--- a/css/mainTable.css
+++ b/css/mainTable.css
@@ -352,6 +352,7 @@ td {
     -webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
     -moz-transition: opacity 0.3s 0s, visibility 0s 0s;
     transition: opacity 0.3s 0s, visibility 0s 0s;
+    z-index: 100;
 }
 
 .cd-popup-container {
