--- a/css/stats.css
+++ b/css/stats.css
@@ -2,7 +2,42 @@
 #bar-chart-horizontal,
 #socios,
 #campeonato {
-    display: block;
-    margin-left: 20%;
-    width: 60% !important;
+    margin-left: 10%;
+    padding-top: 2%;
+    width: 80% !important;
+    height: 500px !important;
+}
+
+#navbar-primary.navbar-default {
+    background: transparent;
+    border: none;
+}
+
+#navbar-primary.navbar-default .navbar-nav {
+    width: 100%;
+    text-align: center;
+}
+
+#navbar-primary.navbar-default .navbar-nav>li {
+    display: inline-block;
+    float: none;
+}
+
+#navbar-primary.navbar-default .navbar-nav>li>a {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+#active {
+    background-color: aqua;
+}
+
+a {
+    text-decoration: none;
+    cursor: pointer;
+}
+
+li:hover {
+    color: rgb(172, 172, 169);
+    cursor: pointer;
 }
