Funciona todo menos mail

--- a/css/socio.css
+++ b/css/socio.css
@@ -380,7 +380,7 @@ textarea.input100 {
 [ Alert validate ]*/
 
 .validate-input {
-    position: relative;
+    position: static;
 }
 
 .alert-validate::before {
